GUI-2205: Fix alignment of bucket icon and unbold tile items on buckets landing page tile view

--- a/eucaconsole/static/css/pages/buckets.css
+++ b/eucaconsole/static/css/pages/buckets.css
@@ -159,7 +159,7 @@ table.expando tr.even, table.expando tr.alt, table.expando tr:nth-of-type(even) 
 
 .gridwrapper .has-bucket-icon { padding-left: 20px; background: url(../../img/svg/bucket_solo_green.svg) no-repeat; }
 .gridwrapper .has-shared-icon { padding-left: 20px; background: url(../../img/svg/bucket_shared.svg) no-repeat; }
-.gridwrapper .tile .header a.has-bucket-icon { padding-left: 26px; background-size: 11px; background-position: 8px 6px; }
+.gridwrapper .tile .header a.has-bucket-icon { padding-left: 26px; background-size: 11px; background-position: 8px 9px; }
 .gridwrapper .tile .header a.has-shared-icon { padding-left: 20px; }
 
 .button.cancel { background-color: #990000; }
